# centauri-fsm-editor

./: .gitmodules  3RDPARTY.md  CMakeLists.txt  LICENSE.md  README.md
doc/: Doxyfile
src/: main.cpp
src/fsm-editor/: common.hpp  editor.cpp  editor.hpp  fwd.hpp  node.cpp  node.hpp  visitor.hpp
src/fsm-editor/nodes/: condnode.cpp  condnode.hpp  ifnode.cpp  ifnode.hpp  nodes.hpp  statenode.cpp  statenode.hpp
src/fsm-editor/util/: erase.hpp  idhash.hpp  imgui.cpp  imgui.hpp  nativeformat.hpp
src/fsm-editor/visitors/: centauriserializer.cpp  centauriserializer.hpp  linkverifier.cpp  linkverifier.hpp  nativedeserializer.cpp  nativedeserializer.hpp  nativeserializer.cpp  nativeserializer.hpp  nodeduplicator.cpp  nodeduplicator.hpp  nodemenurenderer.cpp  nodemenurenderer.hpp  noderenderer.cpp  noderenderer.hpp  predvisitor.cpp  predvisitor.hpp
src/fsm-editor/widgets/: boolexprinput.cpp  boolexprinput.hpp  stringinput.cpp  stringinput.hpp
src/imgui-node-editor/: imgui_node_editor.cpp
src/onidev/core/: contract.h  not_null.h  span.h
workdir/: .gitignore  NodeEditor.json  imgui.ini
